--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           curl -o- "https://dl-cli.pstmn.io/install/osx_64.sh" | sh
       - name: Login to Postman CLI
-        run: postman login --with-api-key ${{secrets.POSTMAN_API_KEY}}
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
       - name: Run API tests
         run: |
-          postman collection run "36235803-3c4683ea-ef6e-493b-8cc1-0ef00e35afec"
+          postman collection run "36235803-7796d5cb-2f40-49b8-8c17-b66185d14365"
